--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -26,6 +26,8 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
 
+    implementation 'org.ftclib.ftclib:core:2.1.1' // FTCLib core
+
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.21'
 }
