--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,9 +25,10 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
-
-    implementation 'org.ftclib.ftclib:core:2.1.1' // FTCLib core
+    annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.21'
+
+    implementation 'org.ftclib.ftclib:core:2.1.1' // FTCLib core
 }
